--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,13 @@ dependencies:
   shared_preferences: ^2.0.7
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^1.3.1
+  bitmap: ^0.1.2
+  image: ^3.0.8
+  image_picker: ^0.8.4+4
+  lint: ^1.7.2
 
 dev_dependencies:
+  flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
 
@@ -49,6 +54,7 @@ flutter_icons:
   
 flutter_intl:
   enabled: true
+
 
 flutter_native_splash:
 
